Fixed  problems after merge and started adding and removal of waypoints.